fix team slider spacing

--- a/src/sass/60_components/_components.team.scss
+++ b/src/sass/60_components/_components.team.scss
@@ -45,10 +45,15 @@
 
   &__slider {
     margin: 0;
-    contain: layout;
+    margin-bottom: 5rem;
     overflow: visible;
 
+    @include media-breakpoint-up(xl) {
+      margin-bottom: 1rem;
+    }
+
     .c-slider__track {
+      contain: layout;
       overflow: visible;
     }
   }
